--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
     <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon.png" /> 
+    <link rel="apple-touch-icon" href="./images/favicon.png" />
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page theme-light wrapper">
@@ -120,25 +121,24 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              1 спринт: Я — чистый лист
-            </h2>
+            <h2 class="card__list-title">1 спринт: Я — чистый лист</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car-brightness"
               />
               <p class="watermark watermark__sprint">&lt;/html&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                На первых этапах мы работали со страхами и сомнениями, 
-                которые часто испытывают новички. Один из них — страх перед чистым листом. 
-                Это, конечно же, намного сложнее, чем боязнь куска бумаги. 
-                Часто за этим ощущением скрываются более глубокие вопросы: с чего начать?
-                а вдруг будет слишком сложно? что, если я не справлюсь?
+                На первых этапах мы работали со страхами и сомнениями, которые
+                часто испытывают новички. Один из них — страх перед чистым
+                листом. Это, конечно же, намного сложнее, чем боязнь куска
+                бумаги. Часто за этим ощущением скрываются более глубокие
+                вопросы: с чего начать? а вдруг будет слишком сложно? что, если
+                я не справлюсь?
               </p>
               <p class="card__text">
                 Место для ваших воспоминаний о начале первого спринта.
@@ -191,22 +191,20 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              1 спринт: А если не получится?
-            </h2>
+            <h2 class="card__list-title">1 спринт: А если не получится?</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car-saturate"
               />
               <p class="watermark watermark__sprint">&lt;css&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                Первый проект — позади! Но это всё ещё самое начало пути. 
-                Радость могла быстро померкнуть и смениться ожиданием провала. 
+                Первый проект — позади! Но это всё ещё самое начало пути.
+                Радость могла быстро померкнуть и смениться ожиданием провала.
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p class="card__text">
@@ -260,24 +258,23 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              2 спринт: Погоня за идеалом
-            </h2>
+            <h2 class="card__list-title">2 спринт: Погоня за идеалом</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car__hue-rotate"
               />
               <p class="watermark">&lt;desigions&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                На этом этапе вы уже достаточно разбирались в основах вёрстки, 
-                чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом 
-                и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму 
-                и вместо того, чтобы сделать идеально, старались просто сделать.
+                На этом этапе вы уже достаточно разбирались в основах вёрстки,
+                чтобы понять, как много ещё впереди. Вы могли попытаться
+                погнаться за идеалом и понять, что он недостижим. А, может, вы
+                вовсе и не подвержены перфекционизму и вместо того, чтобы
+                сделать идеально, старались просто сделать.
               </p>
               <p class="card__text">
                 Место для ваших воспоминаний о начале второго спринта.
@@ -330,24 +327,24 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              2 спринт: О тех, кто рядом
-            </h2>
+            <h2 class="card__list-title">2 спринт: О тех, кто рядом</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car-invert"
               />
               <p class="watermark">care</p>
             </div>
             <div class="text">
               <p class="card__text">
-                Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, 
-                что одни против целого мира). Вас окружали одногруппники, команда сопровождения 
-                и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. 
-                Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
+                Всё это время вы были не одиноки (хотя, возможно, иногда и
+                чувствовали, что одни против целого мира). Вас окружали
+                одногруппники, команда сопровождения и просто близкие люди,
+                которым можно пожаловаться, если очередной макет просто так не
+                поддавался. Осваивать что-то новое легче, когда рядом есть
+                единомышленники, не правда ли?
               </p>
               <p class="card__text">
                 Место для ваших воспоминаний об окончании второго спринта.
@@ -400,23 +397,21 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              3 спринт: Обходные стратегии
-            </h2>
+            <h2 class="card__list-title">3 спринт: Обходные стратегии</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car-sepia"
               />
               <p class="watermark">&lt;support&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                На этом курсе вы постоянно решали разные задачи. 
-                В какой-то момент вам могло показаться, что решения просто иссякли. 
-                Значит, пришло время посмотреть на задачу под другим углом.
+                На этом курсе вы постоянно решали разные задачи. В какой-то
+                момент вам могло показаться, что решения просто иссякли. Значит,
+                пришло время посмотреть на задачу под другим углом.
               </p>
               <p class="card__text">
                 Место для ваших воспоминаний о начале третьего спринта.
@@ -469,24 +464,23 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              3 спринт: Когда опускаются руки
-            </h2>
+            <h2 class="card__list-title">3 спринт: Когда опускаются руки</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car-blur"
               />
               <p class="watermark">&lt;lifes-style: none;&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
-                Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, 
-                и жизнь не забыть пожить. В такие моменты очень нужна концентрация. 
-                Вспомните, откуда вы её черпали.
+                Во время учёбы часто возникает чувство, когда не знаешь, за что
+                хвататься. Вроде и проектную пора сдавать, и задачи хочется
+                порешать, и в теории получше разобраться, и жизнь не забыть
+                пожить. В такие моменты очень нужна концентрация. Вспомните,
+                откуда вы её черпали.
               </p>
               <p class="card__text">
                 Место для ваших воспоминаний об окончании третьего спринта.
@@ -539,28 +533,28 @@
       <section class="content wrapper">
         <ul class="card__list">
           <li class="card__list-item">
-            <h2 class="card__list-title">
-              «Сейчас я здесь»
-            </h2>
+            <h2 class="card__list-title">«Сейчас я здесь»</h2>
             <div class="card__image">
               <img
                 alt="машина"
                 src="./images/сar.png"
                 loading="lazy"
-                class="image__item"
+                class="image__item car__huerotate"
               />
               <p class="watermark">&lt;experience&gt;</p>
             </div>
             <div class="text">
               <p class="card__text">
-                Сейчас вы уже очень много знаете о вёрстке. Но это только начало. 
-                Во-первых, впереди ещё много материала про «красотищу». 
-                Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. 
-                И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, 
-                когда важен сам процесс познания. Ведь часто путь — и есть результат.
+                Сейчас вы уже очень много знаете о вёрстке. Но это только
+                начало. Во-первых, впереди ещё много материала про «красотищу».
+                Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка —
+                это целый мир. И этот мир постоянно меняется. Познать его
+                полностью не получится, но это тот случай, когда важен сам
+                процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p class="card__text">
-                Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+                Место, чтобы остановиться, подумать и написать, что вы
+                чувствуете в этой точке пути.
               </p>
             </div>
             <div class="card__buttons">
@@ -611,7 +605,7 @@
     <footer>
       <button
         type="button"
-        onclick="window['dialog-id'].show();"
+        onclick="window['dialog-id'].showModal();"
         aria-controls="dialog-id"
         class="button button__save"
       >
@@ -622,21 +616,22 @@
       </button>
 
       <dialog class="dialog" id="dialog-id">
-        <div class="modal__wrapper"> 
+        <div class="modal__wrapper">
           <div class="modal__form">
-          <svg class="button-floppy button__modal-floppy">
-            <use href="./svg/floppy.svg#floppy" class="floppy"></use>
-          </svg>
-          <p class="modal__text">Вставьте дискету, чтобы продолжить</p>
-        </div>
-        <form class="close-dialog">
-          <button
-          class="close-button"
-          type="button"
-          onclick="window['dialog-id'].close();">
-       ok
-        </button>
-        </form>
+            <svg class="button-floppy button__modal-floppy">
+              <use href="./svg/floppy.svg#floppy" class="floppy"></use>
+            </svg>
+            <p class="modal__text">Вставьте дискету, чтобы продолжить</p>
+          </div>
+          <form class="close-dialog">
+            <button
+              class="close-button"
+              type="button"
+              onclick="window['dialog-id'].close();"
+            >
+              ok
+            </button>
+          </form>
         </div>
       </dialog>
     </footer>
