--- a/index.html
+++ b/index.html
@@ -593,10 +593,10 @@
             <form class="close-dialog">
               <button
                 class="close-button"
-                type="button"
+                type="submit"
                 onclick="window['dialog-id'].close();"
               >
-                ok
+                <span class="dialog-text">ok</span>
               </button>
             </form>
           </div>
