--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </button>
           </div>
         </article>
-        <articcle class="card__list">
+        <article class="card__list">
           <h2 class="card__list-title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image">
             <img
@@ -373,7 +373,7 @@
               <span class="button__text">like</span>
             </button>
           </div>
-        </articcle>
+        </article>
         <article class="card__list">
           <h2 class="card__list-title">3 спринт: Обходные стратегии</h2>
           <div class="card__image">
