--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -176,7 +176,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -239,7 +239,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -304,7 +304,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -370,7 +370,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -433,7 +433,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -498,7 +498,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
@@ -565,7 +565,7 @@
               </svg>
             </button>
             <button type="button" class="button card__like-button">
-              <span class="button__text">like</span>
+              <span class="button__text">Like</span>
             </button>
           </div>
         </article>
